started the finite geometry explaination

--- a/contextuality/lib.bib
+++ b/contextuality/lib.bib
@@ -31,6 +31,23 @@
   author = {Cabello, A. and Estebaranz, J. M. and Garc\'ia-Alcaine, G.}
 }
 
+@article{dHG+22,
+  title = {Contextuality Degree of Quadrics in Multi-Qubit Symplectic Polar Spaces},
+  year = {2022},
+  month = nov,
+  journal = {Journal of Physics A: Mathematical and Theoretical},
+  volume = {55},
+  number = {47},
+  pages = {475301},
+  publisher = {{IOP Publishing}},
+  issn = {1751-8121},
+  doi = {10.1088/1751-8121/aca36f},
+  copyright = {All rights reserved},
+  langid = {english},
+  note = {\url{https://dx.doi.org/10.1088/1751-8121/aca36f}},
+  author = {de Boutray, H. and Holweck, F. and Giorgetti, A. and Masson, P. and Saniga, M.}
+}
+
 @article{EPR35,
   title = {Can {{Quantum-Mechanical Description}} of {{Physical Reality Be Considered Complete}}?},
   year = {1935},
@@ -76,4 +93,21 @@
   langid = {ngerman},
   note = {\url{https://doi.org/10.1007/BF01491891}},
   author = {Schr\"odinger, E.}
+}
+
+@article{SdHG21,
+  title = {Taxonomy of {{Polar Subspaces}} of {{Multi-Qubit Symplectic Polar Spaces}} of {{Small Rank}}},
+  year = {2021},
+  month = sep,
+  journal = {Mathematics},
+  volume = {9},
+  number = {18},
+  pages = {2272},
+  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  doi = {10.3390/math9182272},
+  copyright = {http://creativecommons.org/licenses/by/3.0/},
+  langid = {english},
+  keywords = {binary symplectic polar spaces,distinguished sets of doilies,geometric hyperplanes,N-qubit observables,Veldkamp lines},
+  note = {\url{https://www.mdpi.com/2227-7390/9/18/2272}},
+  author = {Saniga, M. and de Boutray, H. and Holweck, F. and Giorgetti, A.}
 }
