--- a/contextuality/contextuality.tex
+++ b/contextuality/contextuality.tex
@@ -190,6 +190,36 @@ series of measurements have to be carefully chose.
 \section{Link with quantum programs verification}
 \label{sec:link_with_quantum_programs_verification}
 
+Program verification is a concept that stems as early as from the beginning of
+computer science. For instance, Hoare logic \cite{Hoa69} was introduced in 1969
+where the now very famous C language was introduced in 1972! The idea behind
+program verification is to \emph{prove} that the program written by the
+programmer does what is was conceived to do. This proof is possible because a
+program is in fact nothing but a series of logical instruction, so it can in fact
+be translated as a series of application of a (mathematical) function to a
+certain variable encoding the state of the system. The proof is then to show that
+the output variable validates the condition imposed by the programmer, given the
+input variable. Let us take a small example to explore this concept:
+$$f_1(x) = x+1; f_2(x) = 2x$$
+\begin{align*}
+& program (n)\ \{\\
+& \quad  a = f_1(n);\\
+& \quad  b = f_2(a);\\
+& \quad  return\ b;\\
+& \}\\
+\end{align*}
+The program is supposed to compute $2n+1$, the condition for the input variable
+(also called pre-condition) being that it's a number, the condition for the
+output (also called post-condition) will be that it's a number and that 
+$program(n)=2n+1$. Given that one can show that we should have $2n+1=f_2(a)=2a$,
+and thus that $2n+1=2f_1(n)=2(n+1)$. Since this is false, we showed that our
+function has a bug (without executing it)!
+
+This is a very powerful way to verify programs, but it is pretty hard to
+accomplish. My previous works focus on trying to ease this for quantum program,
+by studying properties of quantum states that could be used in quantum program
+verification. 
+
 \section*{At ColibrITD}
 
 \bibliographystyle{alpha}
