--- a/contextuality/lib.bib
+++ b/contextuality/lib.bib
@@ -80,6 +80,21 @@
   author = {Holweck, F. and de Boutray, H. and Saniga, M.}
 }
 
+@article{Hoa69,
+  title = {An Axiomatic Basis for Computer Programming},
+  year = {1969},
+  month = oct,
+  journal = {Communications of the ACM},
+  volume = {12},
+  number = {10},
+  pages = {576--580},
+  issn = {0001-0782},
+  doi = {10.1145/363235.363259},
+  keywords = {axiomatic method,formal language definition,machine-independent programming,program documentation,programming language design,theory of programming' proofs of programs},
+  note = {\url{https://doi.org/10.1145/363235.363259}},
+  author = {Hoare, C. A. R.}
+}
+
 @article{Sch35,
   title = {{Die gegenw\"artige Situation in der Quantenmechanik}},
   year = {1935},
